--- a/.github/workflows/auto-update-workflow.yml
+++ b/.github/workflows/auto-update-workflow.yml
@@ -31,14 +31,43 @@ jobs:
             echo "version=${{ github.event.client_payload.version }}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Fetch checksums
+      - name: Fetch checksums from attestations
         id: checksums
         run: |
           VERSION="${{ steps.version.outputs.version }}"
           BASE_URL="https://github.com/bordumb/auths/releases/download/v${VERSION}"
 
-          X86_64_SHA=$(curl -sL "${BASE_URL}/auths-macos-x86_64.tar.gz.sha256" | awk '{print $1}')
-          ARM64_SHA=$(curl -sL "${BASE_URL}/auths-macos-aarch64.tar.gz.sha256" | awk '{print $1}')
+          # Function to extract SHA256 from .auths.json or fall back to .sha256
+          get_checksum() {
+            local artifact=$1
+
+            # Try attestation first
+            local attestation=$(curl -sL "${BASE_URL}/${artifact}.auths.json" 2>/dev/null || echo "")
+            if [ -n "$attestation" ]; then
+              local sha=$(echo "$attestation" | jq -r '.payload.digest.hex' 2>/dev/null || echo "")
+              if [ -n "$sha" ] && [ "$sha" != "null" ]; then
+                echo "$sha"
+                return 0
+              fi
+            fi
+
+            # Fall back to legacy .sha256
+            local sha=$(curl -sL "${BASE_URL}/${artifact}.sha256" 2>/dev/null | awk '{print $1}')
+            if [ -n "$sha" ] && [ "$sha" != "Not" ]; then
+              echo "$sha"
+              return 0
+            fi
+
+            return 1
+          }
+
+          X86_64_SHA=$(get_checksum "auths-macos-x86_64.tar.gz")
+          ARM64_SHA=$(get_checksum "auths-macos-aarch64.tar.gz")
+
+          if [ -z "$X86_64_SHA" ] || [ -z "$ARM64_SHA" ]; then
+            echo "Error: Failed to fetch checksums"
+            exit 1
+          fi
 
           echo "x86_64_sha=${X86_64_SHA}" >> $GITHUB_OUTPUT
           echo "arm64_sha=${ARM64_SHA}" >> $GITHUB_OUTPUT
