--- a/.github/workflows/auto-update-workflow.yml
+++ b/.github/workflows/auto-update-workflow.yml
@@ -1,9 +1,3 @@
-# GitHub Action to automatically update the Homebrew formula
-# Place this in .github/workflows/ of your homebrew-auths tap repository
-#
-# This workflow watches for new releases in the main auths repository
-# and automatically creates a PR with the updated formula
-
 name: Auto-update Formula
 
 on:
@@ -12,85 +6,37 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to update to (e.g., 0.0.1-rc.7)'
+        description: 'Version to update to (e.g., 0.0.1-rc.10)'
         required: true
 
 jobs:
   update-formula:
     runs-on: macos-latest
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - name: Checkout tap repository
         uses: actions/checkout@v4
 
-      - name: Set version
+      - name: Install just
+        run: brew install just
+
+      - name: Resolve version
         id: version
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "version=${{ inputs.version }}" >> $GITHUB_OUTPUT
+            echo "version=${{ inputs.version }}" >> "$GITHUB_OUTPUT"
           else
-            echo "version=${{ github.event.client_payload.version }}" >> $GITHUB_OUTPUT
+            echo "version=${{ github.event.client_payload.version }}" >> "$GITHUB_OUTPUT"
           fi
-
-      - name: Fetch checksums from attestations
-        id: checksums
-        run: |
-          VERSION="${{ steps.version.outputs.version }}"
-          BASE_URL="https://github.com/bordumb/auths/releases/download/v${VERSION}"
-
-          # Function to extract SHA256 from .auths.json or fall back to .sha256
-          get_checksum() {
-            local artifact=$1
-
-            # Try attestation first
-            local attestation=$(curl -sL "${BASE_URL}/${artifact}.auths.json" 2>/dev/null || echo "")
-            if [ -n "$attestation" ]; then
-              local sha=$(echo "$attestation" | jq -r '.payload.digest.hex' 2>/dev/null || echo "")
-              if [ -n "$sha" ] && [ "$sha" != "null" ]; then
-                echo "$sha"
-                return 0
-              fi
-            fi
-
-            # Fall back to legacy .sha256
-            local sha=$(curl -sL "${BASE_URL}/${artifact}.sha256" 2>/dev/null | awk '{print $1}')
-            if [ -n "$sha" ] && [ "$sha" != "Not" ]; then
-              echo "$sha"
-              return 0
-            fi
-
-            return 1
-          }
-
-          X86_64_SHA=$(get_checksum "auths-macos-x86_64.tar.gz")
-          ARM64_SHA=$(get_checksum "auths-macos-aarch64.tar.gz")
-
-          if [ -z "$X86_64_SHA" ] || [ -z "$ARM64_SHA" ]; then
-            echo "Error: Failed to fetch checksums"
-            exit 1
-          fi
-
-          echo "x86_64_sha=${X86_64_SHA}" >> $GITHUB_OUTPUT
-          echo "arm64_sha=${ARM64_SHA}" >> $GITHUB_OUTPUT
 
       - name: Update formula
-        run: |
-          VERSION="${{ steps.version.outputs.version }}"
-          X86_64_SHA="${{ steps.checksums.outputs.x86_64_sha }}"
-          ARM64_SHA="${{ steps.checksums.outputs.arm64_sha }}"
+        run: just update ${{ steps.version.outputs.version }}
 
-          sed -i '' "s/version \".*\"/version \"${VERSION}\"/" Formula/auths.rb
-
-          # Update x86_64 SHA256
-          sed -i '' "/Hardware::CPU.intel?/,/sha256/ s|sha256 \"[^\"]*\"|sha256 \"${X86_64_SHA}\"|" Formula/auths.rb
-
-          # Update ARM SHA256
-          sed -i '' "/Hardware::CPU.arm?/,/sha256/ s|sha256 \"[^\"]*\"|sha256 \"${ARM64_SHA}\"|" Formula/auths.rb
-
-      - name: Test formula
-        run: |
-          brew audit --strict --online Formula/auths.rb
-          brew install --build-from-source ./Formula/auths.rb
-          brew test auths
+      - name: Audit formula
+        run: just audit
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
@@ -98,11 +44,7 @@ jobs:
           commit-message: "Update auths to v${{ steps.version.outputs.version }}"
           title: "Update auths to v${{ steps.version.outputs.version }}"
           body: |
-            Automated update to auths v${{ steps.version.outputs.version }}
-
-            **Checksums:**
-            - x86_64: `${{ steps.checksums.outputs.x86_64_sha }}`
-            - aarch64: `${{ steps.checksums.outputs.arm64_sha }}`
+            Automated formula update to auths v${{ steps.version.outputs.version }}.
 
             **Release:** https://github.com/bordumb/auths/releases/tag/v${{ steps.version.outputs.version }}
           branch: "update-v${{ steps.version.outputs.version }}"
